[package]
name = "tlscanner"
version = "0.1.0"
edition = "2024"

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
anyhow = "1.0.102"
tls-parser = "0.12.2"
phf = { version = "0.13", features = ["macros"] }
strum = "0.28"
strum_macros = "0.28"
x25519-dalek = { version = "2.0.1", features = ["getrandom"] }
rand = "0.10.1"
console = "0.16.3"
base64 = "0.22.1"

[build-dependencies]
ureq = { version = "3.3.0", default-features = false, features = [
    "json",
    "rustls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
phf = "0.13"
phf_codegen = "0.13"
